add linter, prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,72 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "xo",
+    "xo-typescript/space",
+    "xo-react/space",
+    "next/core-web-vitals",
+    "eslint-config-prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "react/react-in-jsx-scope": "off",
+        "react/button-has-type": "off",
+        "@typescript-eslint/naming-convention": "off",
+        "@typescript-eslint/no-empty-function": "warn",
+        "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-unsafe-call": "off",
+        "@typescript-eslint/no-unsafe-argument": "off",
+        "@typescript-eslint/triple-slash-reference": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@next/next/no-img-element": "off",
+        "react/require-default-props": "off",
+        "new-cap": "off",
+        "prettier/prettier": [
+          "error",
+          {
+            "editorconfig": true,
+            "singleQuote": true,
+            "jsxSingleQuote": true,
+            "trailingComma": "es5",
+            "importOrder": [
+              "^(react/(.*)$)|^(react$)",
+              "^(next/(.*)$)|^(next$)",
+              "<THIRD_PARTY_MODULES>",
+              "",
+              "^@/types/(.*)$",
+              "^@/lib/(.*)$",
+              "^(@/constants/(.*)$)|^(@/constants$)",
+              "^(@/utils/(.*)$)|^(@/utils$)",
+              "^(@/hooks/(.*)$)|^(@/hooks$)",
+              "^@/components/(.*)$",
+              "^(@/core/(.*)$)|^(@/core$)",
+              "^@/styles/(.*)$",
+              "^@/app/(.*)$",
+              "",
+              "^[./]"
+            ],
+            "importOrderSeparation": false,
+            "importOrderSortSpecifiers": true,
+            "importOrderBuiltinModulesToTop": true,
+            "importOrderParserPlugins": [
+              "typescript",
+              "jsx",
+              "decorators-legacy"
+            ],
+            "importOrderMergeDuplicateImports": true,
+            "importOrderCombineTypeAndValueImports": true,
+            "plugins": [
+              "@ianvs/prettier-plugin-sort-imports",
+              "prettier-plugin-tailwindcss"
+            ]
+          }
+        ]
+      }
+    }
+  ],
+  "plugins": ["eslint-plugin-prettier"],
+  "ignorePatterns": ["/*", "!src", "!/*.js", "!/*.cjs"],
+  "root": true
 }
