--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@fontsource/open-sans": "^5.0.28",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "axios": "^1.7.2",
@@ -24,8 +27,11 @@
     "next-intl": "^3.15.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-show-more-text": "^1.7.1",
     "sharp": "^0.33.4",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
@@ -35,6 +41,8 @@
     "@types/node": "^20.14.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-show-more-text": "^1.4.5",
+    "babel-plugin-react-component-data-attribute": "^0.6.0",
     "eslint": "^8",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-xo": "^0.45.0",
