--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
 NODE_ENV=development
 BABEL_ENV=development
-API_URL=http://localhost:3000/api
+API_URL=http://khoakomlem-internal.ddns.net:3000/api
+#API_URL=http://localhost:9999/api
+# API_URL=http://localhost:3000/api
 API_VERSION=test
 API_TEST_TOKEN=
