--- a/package.json
+++ b/package.json
@@ -14,26 +14,33 @@
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.5",
+    "immer": "^10.1.1",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-intl": "^3.15.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-lite-youtube-embed": "^2.4.0",
     "react-show-more-text": "^1.7.1",
     "sharp": "^0.33.4",
+    "sticky-sidebar": "^3.3.1",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "usehooks-ts": "^3.1.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
@@ -52,6 +59,7 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
