--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV=production
 BABEL_ENV=production
-API_URL=http://localhost:3000/api
+API_URL=http://khoakomlem-internal.ddns.net:3000/api
 API_VERSION=test
 API_TEST_TOKEN=
