--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-intl": "^3.15.2",
+    "next-seo": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-lite-youtube-embed": "^2.4.0",
