--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.2.4",
     "next-intl": "^3.15.2",
     "next-seo": "^6.5.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-lite-youtube-embed": "^2.4.0",
