--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "decimal.js": "^10.4.3",
     "embla-carousel-react": "^8.1.5",
     "immer": "^10.1.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.395.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "next-intl": "^3.15.2",
     "next-seo": "^6.5.0",
@@ -43,6 +46,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "ts-debounce": "^4.0.0",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
@@ -51,6 +55,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@tanstack/react-query": "^5.45.1",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.14.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
