--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
 BABEL_ENV=production
-API_URL=https://smartcine-website.vercel.app/api
-API_VERSION=test
+API_URL=http://khoakomlem-internal.ddns.net:9994/api
+API_VERSION=v1
