--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
 BABEL_ENV=production
-API_URL=http://localhost:9994/api
+API_URL=https://khoakomlem-internal.ddns.net:9985
 API_VERSION=v1
